# archive-foocat

./: .Rhistory  .bumpversion.cfg  .coverage  .gitignore  README.md  README.rst  coverage.xml  pyproject.toml  requirements.txt
.github/workflows/: build.yml  pythonpackage.yml  release-major.yml  release-minor.yml  release.yml  test.yml
docs/source/: conf.py  index.rst
foocat/: cat.py
foocat.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
foocategoricals/: __init__.py
foocategoricals/cat/: cat.py
htmlcov/: foocat___init___py.html  foocat_cat_py.html  index.html  status.json
tests/: test_foocat.py  test_foocategoricals.py
