[tool.poetry]
name = "foocat"
version = "0.1.0"
description = ""
authors = ["ttimbers <tiffany.timbers@stat.ubc.ca>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
