[tool.poetry]
name = "foocat"
version = "0.12.0"
description = ""
authors = ["ttimbers <tiffany.timbers@stat.ubc.ca>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.8.1"
codecov = "^2.0.15"
python-semantic-release = "^4.5.1"

[tool.semantic_release]
version_variable = "foocat/__init__.py:__version__"
version_source = "commit"
upload_to_pypi = "false"
patch_without_tag = "true"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

